# ogCat

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp  main_controller.cpp  main_controller.h  main_def_shader.h  main_include.h  main_initializor.h
res/fbx/: bird.FBX  boxman.fbx  column.FBX  food.FBX  ground.fbx  ground_plane.fbx  poison.FBX  star.FBX  wall.FBX
res/game/levels/: level_1
res/models/: bird.ani  bird.bon  boxman.ani  boxman.bon
res/objects/: antidote.txt  bird.txt  boxman.txt  boxman0.txt  boxman1.txt  column.txt  food.txt  ground.txt  poison.txt  star.txt  wall.txt
src/collision/: basicBlock.cpp  basicBlock.h
src/game/: gmLight.cpp  gmLight.h  gmObjRenderer.cpp  gmObjRenderer.h  gmObject.cpp  gmObject.h  gmParticle.cpp  gmParticle.h  gmRenderer.h  gmSys.cpp  gmSys.h  gmWorld.cpp  gmWorld.h
src/ogCat/: 3DObject.cpp  3DObject.h  FXAA.cpp  FXAA.h  R2DLoader.cpp  R2DLoader.h  R3DLoader.cpp  R3DLoader.h  TwoPassBlur.cpp  TwoPassBlur.h  baker.cpp  baker.h  camera.cpp  camera.h  colorBuffer.cpp  common.h  dbg.cpp  dbg.h  depthBuffer.cpp  dynamic_mesh.cpp  dynamic_mesh.h  feedback.cpp  feedback.h  frameBuffer.cpp  frameBuffer.h  frameEffect.cpp  frameEffect.h  frameShader.cpp  gbuffer.cpp  gbuffer.h  graph2D.h  gui.cpp  gui.h  lightBuffer.h  material.h  mesh.cpp  mesh.h  mesh_instance.cpp  mesh_instance.h  mesh_shader.cpp  (+27 more)
